src/app/pages/player/contents/simple-question/simple-question.component.scss
.flip-container {
  display: flex;
  flex-grow: 1;
  height:100%;
  perspective: 1000px;
  overflow-x: hidden;

  &.flipped {
    overflow: hidden;

    .flipper {
      transform: rotate3d(0, -1, 0, 180deg);
    }

    .back {
      z-index: 1;
    }
  }

  .flipper {
    display: flex;
    flex-grow: 1;
    flex-flow: row wrap;
    transition: 0.6s;
    transform-style: preserve-3d;
    animation: flashflip 0.05s;
    will-change: transform;
    width:0;

    &.notransition{
      transition: none!important;
    }

    .front, .back {
      display: flex;
      width:100%;
      backface-visibility: hidden;
    }

    .front {
      transform: rotate3d(0, 0, 0, 0);
      z-index: 1;
    }

    .back {
      transform: rotate3d(0, -1, 0, 180deg);
      margin-left: -100%;
      max-height: 100%;
    }
  }
}

.question-card{
  display: flex;
  justify-content: space-evenly;
  flex-direction: column;
  text-align: center;
  padding: 1em;
  flex-grow: 1;
  background: #fff;
  border-radius: 8px;
  filter: drop-shadow(0 4px 16px rgba(0, 0, 0, 0.12));
  overflow:hidden;

  h2 {
    margin: 0;
  }

  h4{
    font-size: 1rem;
    color:#666;

    &.banner{
      width: 100%;
      padding: 1.2rem 1rem 1rem 1rem;
      margin: 0 0 10px 0;
      color:white;
      background: var(--ion-color-inria-blue);
      clip-path: polygon(0 0, 100% 10%, 100% 90%, 0 100%);
    }
  }

  b{
    line-height: 1;
  }

  button{
    padding: 1em;
    background: var(--ion-color-primary);
    text-transform: uppercase;
    font-weight: bold;
    color:white;
    border-radius: 4px;

    &:disabled, &.disabled{
      opacity: 0.5;
    }
  }

  .explanation{
    display: flex;
    flex-direction: column;
    font-size:14px;
    overflow: hidden;

    .explanation-text{
      overflow: auto;
      text-align: left;
    }
  }

  .explanation-icon{
    font-size: 50px;
    margin-bottom: 20px;
  }

  ion-radio{
    background: transparent;
    border-radius: 100%;
    transition: all .1s .2s;
    &.radio-checked{
      background: var(--ion-color-primary);
    }
  }

  ion-list{
    overflow: auto;
  }
}

@keyframes flashflip {
  0% {
    transform: rotate3d(0, 1, 0, 180deg);
  }
  100% {
    transform: rotate3d(0, 0, 0, 180deg);
  }
}

